cabal-version:      2.4
name:               aoc2021
version:            0.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tom Jemmett
maintainer:         thomas.jemmett@nhs.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable aoc2021
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Day01

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
