cabal-version:      2.4
name:               aoc2021
version:            0.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tom Jemmett
maintainer:         thomas.jemmett@nhs.net

common shared-properties
    build-depends:
        base ^>=4.15.0.0,
        containers,
        parsec,
        split
    default-extensions: FlexibleContexts
    default-language: Haskell2010

library
    import:           shared-properties
    exposed-modules:
        Days
        Common
    other-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
        Day13
        Day14
        Day15
        Day16
        Day17
        Day18
        Day19
        Day20
        Day21
        Day22
        Day23
        Day24
        Day25
    hs-source-dirs:   src

executable aoc2021
    import:           shared-properties
    main-is:          Main.hs
    build-depends:
        aoc2021
    hs-source-dirs:   app

test-suite spec
    import:           shared-properties
    type:             exitcode-stdio-1.0
    other-modules:
        Day01Spec
        Day02Spec
        Day03Spec
        Day04Spec
        Day05Spec
        Day06Spec
        Day07Spec
        Day08Spec
        Day09Spec
        Day10Spec
        Day11Spec
        Day12Spec
        Day13Spec
        Day14Spec
        Day15Spec
        Day16Spec
        Day17Spec
        Day18Spec
        Day19Spec
        Day20Spec
        Day21Spec
        Day22Spec
        Day23Spec
        Day24Spec
        Day25Spec
        SpecHelper
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        hspec >= 2.7,
        hspec-discover >= 2.7,
        aoc2021